--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ilsa",
+  "name": "ilsa-2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://gnarking99.github.io/ilsa-2.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -14,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh pager -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
